@@ -39,6 +39,8 @@ public:
 	TilePathSamplerSharedData() { }
 	virtual ~TilePathSamplerSharedData() { }
 
+	virtual void Reset() { }
+
 	static SamplerSharedData *FromProperties(const luxrays::Properties &cfg,
 			luxrays::RandomGenerator *rndGen, Film *film);
 
